--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,7 @@
     {{ content }}
 <hr>
     <p><small> <i>Build with <a href="https://jekyllrb.com/">Jekyll</a> and  <a href="https://github.com/cyevgeniy/jekyll-true-minimal/">true minimal theme</a></i> </small></p>
+    {% include footer.html %}
+
 </body>
 </html>
