--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
 <header>
-    <h1><a href='{{ site.url }}/'>{{ site.name }}</a></h1>
+    <h1>Connor Letko</h1>
 </header>
-<a href='{{ site.url }}/'> Home</a> | <a href='{{ site.url }}/about/'>About </a> | <a href='{{ site.url }}/contact/'> Contacts</a> | <a href='{{ site.url }}/archive/'> Archive</a> 
-<hr>
+
