--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset='utf-8'>
+    <link rel="stylesheet" href="{{site.url}}/assets/css/header.css" type="text/css">
     <title>
         {% if page.title %}
             {{ page.title }}
