--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<div class="navigation">
+<div class="nav">
     <li><a href='{{ site.url }}/'> Home</a></li>
     <li><a href='{{ site.url }}/about/'>About </a></li>
     <li><a href='{{ site.url }}/contact/'> Contacts</a></li>
