--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <link rel="stylesheet" href="{{site.url}}/assets/css/header.css" type="text/css">
+    <link rel="stylesheet" href="{{site.url}}/assets/css/navbar.css" type="text/css">
     <title>
         {% if page.title %}
             {{ page.title }}
