--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <div class="nav">
-    <li><a href='{{ site.url }}/'> Home</a></li>
+    <li><a class="active" href='{{ site.url }}/'> Home</a></li>
     <li><a href='{{ site.url }}/about/'>About </a></li>
     <li><a href='{{ site.url }}/contact/'> Contacts</a></li>
     <li><a href='{{ site.url }}/archive/'> Archive</a></li>
