--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -5,12 +5,12 @@
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #dddddd;
+    background-color: #333;
 }
 
 .nav li {
     float: left;
-    border-right: 1px solid #bbb;
+    border-right: 1px solid #bbbbbb;
 }
 
 .nav li a {
@@ -27,5 +27,9 @@
 
 .nav li a:hover{
     background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
 }
 
