--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,7 @@
 header {
     padding: 60px;
     text-align: center;
-    background: #1abc9c;
+    background: #0086B3;
     color: white;
     font-size: 30px;
 }
