Fix: layout and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
-© Connor Letko -
+<hr>
+
+<p class="footer">© Connor Letko -</p>
 <script type="text/javascript">
     var d = new Date()
     document.write(d.getFullYear())
