--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" href="{{site.url}}/assets/css/header.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/navbar.css" type="text/css">
+    <link rel="stylesheet" href="{{site.url}}/assets/css/footer.css" type="text/css">
     <title>
         {% if page.title %}
             {{ page.title }}
@@ -22,13 +23,13 @@
 </head>
 
 <body>
-    {% include header.html %}
+<div id="container">
     {% include navbar.html %}
+    <div id="header">{% include header.html %}</div>
 
-    {{ content }}
-<hr>
-    <p><small> <i>Build with <a href="https://jekyllrb.com/">Jekyll</a> and  <a href="https://github.com/cyevgeniy/jekyll-true-minimal/">true minimal theme</a></i> </small></p>
-    {% include footer.html %}
+    <div id="body">{{ content }}</div>
 
+    <div id="footer">{% include footer.html %}</div>
+</div>
 </body>
 </html>
