Fix: layout and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,6 @@
 <hr>
 
-<p class="footer">© Connor Letko -</p>
-<script type="text/javascript">
-    var d = new Date()
-    document.write(d.getFullYear())
-</script>
+<p class="footer">© Connor Letko - <script type="text/javascript">var d = new Date() document.write(d.getFullYear())</script></p>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
