--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{site.url}}/assets/css/header.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/navbar.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/footer.css" type="text/css">
+    <link rel="stylesheet" href="{{site.url}}/assets/css/layout.css" type="text/css">
     <title>
         {% if page.title %}
             {{ page.title }}
