--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,11 @@
 </head>
 
 <body>
+{% include header.html %}
+{% include navbar.html %}
 <div id="container">
-    {% include navbar.html %}
-    <div id="header">{% include header.html %}</div>
-
-    <div id="body">{{ content }}</div>
-
-    <div id="footer">{% include footer.html %}</div>
+    <div id="main">{{ content }}</div>
 </div>
+    <footer id="footer">{% include footer.html %}</footer>
 </body>
 </html>
