--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,25 +1,22 @@
-html,
-body {
-    margin:0;
+*{
+    margin: 0;
     padding:0;
+}
+
+html, body {
     height:100%;
 }
 #container {
     min-height:100%;
-    position:relative;
 }
-#header {
-    background:#ff0;
-    padding:10px;
-}
-#body {
-    padding:10px;
-    padding-bottom:60px;   /* Height of the footer */
+
+#main {
+    overflow: auto;
+    padding-bottom: 100px;
 }
 #footer {
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:60px;   /* Height of the footer */
-    background:#6cf;
+    position: relative;
+    height: 100px;
+    margin-top: -100px;
+    clear: both;
 }
