Fix: footer date

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <hr>
 
-<p class="footer">© Connor Letko - <script type="text/javascript">var d = new Date() document.write(d.getFullYear())</script></p>
+<p class="footer">© Connor Letko - <script type="text/javascript">document.write(Date().getFullYear())</script></p>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
