Fix: footer date

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <hr>
-
-<p class="footer">© Connor Letko - <script type="text/javascript">document.write(Date().getFullYear())</script></p>
-
+<div class="footer">
+    <p>© Connor Letko - </p>
+    <script type="text/javascript">document.write(Date().getFullYear())</script>
+</div>
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
     window.ga = function () {
