Fix: footer date

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,10 @@
 <hr>
 <div class="footer">
-    <p>© Connor Letko - </p>
-    <script type="text/javascript">document.write(Date().getFullYear())</script>
+    © Connor Letko -
+    <script type="text/javascript">
+        var d = new Date()
+        document.write(d.getFullYear())
+    </script>
 </div>
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
