--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -13,10 +13,17 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-    <header>
-
-    </header>
-    {% include navbar.html %}
+<!--[if IE]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+<![endif]-->
+{% include navbar.html %}
+<div id="wrapper">
+    <div id="Fcontent">
+        {{content}}
+    </div>
+    {% include sidebar.html %}
+</div>
+    <footer id="footer">{% include footer.html %}</footer>
 </body>
 </html>
 
