--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -28,7 +28,7 @@
 </div>
 <div id="sidebar" class="floatLeft grSmall">
     <div id="sidebar_image">
-        <img src="img/Me.jpg" height="300" width="300"/>
+        <img src="img/Me.jpeg" height="300" width="300"/>
     </div>
 </div>
 <footer id="footer">{% include footer.html %}</footer>
