--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -18,6 +18,7 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
 <![endif]-->
 {% include navbar.html %}
+<div id="wrapper">
 <div id="content"class="floatLeft grBig">
     <div id="article_heading">
         <h1>Homepage</h1>
@@ -30,6 +31,7 @@
     <div id="sidebar_image">
         <img src="img/Me.jpeg" height="300" width="300"/>
     </div>
+</div>
 </div>
 <footer id="footer">{% include footer.html %}</footer>
 </body>
