--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0;
+    padding:0;
+}
+
+html, body {
+    height:100%;
+}
+
 #wrapper {
     width: 960px;
     border: black thin;
@@ -6,6 +15,9 @@
     font-size: 18px;
     line-height: 30px;
     font-family: SansSerif, "Helvetica Neue", Helvetica;
+    min-height:100%;
+    overflow: auto;
+    padding-bottom: 100px;
 }
 #logo img {
     height: 116px;
@@ -37,3 +49,10 @@
 .grSmall {
     width: 367px;
 }
+#footer {
+    position: relative;
+    height: 50px;
+    margin-top: -100px;
+    clear: both;
+}
+
