--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 #wrapper {
-    width: 960px;
+    width: auto;
     border: black thin;
     margin-left: auto;
     margin-right: auto;
@@ -18,6 +18,7 @@ html, body {
     min-height:100%;
     overflow: auto;
     padding-bottom: 100px;
+    padding-top: 100px;
 }
 #logo img {
     height: 116px;
