--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -20,16 +20,11 @@
 {% include navbar.html %}
 <div id="wrapper">
 <div id="content"class="floatLeft grBig">
-    <div id="article_heading">
-        <h1>Homepage</h1>
-    </div>
-    <div id="article_text">
-        {{content}}
-    </div>
+    {content}
 </div>
 <div id="sidebar" class="floatLeft grSmall">
     <div id="sidebar_image">
-        <img src="img/Me.jpeg" height="300" width="300"/>
+        <img src="../img/Me.jpeg" height="328" width="500"/>
     </div>
 </div>
 </div>
