--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -20,7 +20,7 @@
 {% include navbar.html %}
 <div id="wrapper">
 <div id="content"class="floatLeft grBig">
-    {content}
+    {{content}}
 </div>
 <div id="sidebar" class="floatLeft grSmall">
     <div id="sidebar_image">
