--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,8 @@
 <div class="nav">
-    <li><a class="active" href='{{ site.url }}/'> Home</a></li>
+    <li><a href='{{ site.url }}/'> Home</a></li>
     <li><a href='{{ site.url }}/about/'>About </a></li>
-    <li><a href='{{ site.url }}/contact/'>Contacts</a></li>
-    <li><a href='{{ site.url }}/archive/'>Archive</a></li>
+    <li><a href='{{ site.url }}/projects/'>Projects</a></li>
+    <li><a href='{{ site.url }}/writings/'>Writings</a></li>
+    <li><a href='{{ site.url }}/resume/'>Resume</a></li>
+    <li><a href='{{ site.url }}/contact/'>Contact</a></li>
 </div>
