--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,9 @@
 <header>
-    <h1>Connor Letko</h1>
-</header>
+    <img src="../img/Connor.jpg" height="450" width="300"/>
+    <p id="heroText">
+        Hi, my name is Connor Letko
+        I am a Information Systems student
+        at NJIT.
+    </p>
 
+</header>
