--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,5 +1,6 @@
 header {
-    padding: 60px;
+    top: 14px;
+    padding: 40px;
     text-align: center;
     background: #0086B3;
     color: white;
