--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="../img/Connor.jpg" height="450" width="300"/>
+    <img src="img/Connor.jpg" height="450" width="300"/>
     <p id="heroText">
         Hi, my name is Connor Letko
         I am a Information Systems student
