--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,8 +1,10 @@
 header {
     top: 14px;
     padding: 40px;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     background: #0086B3;
     color: white;
     font-size: 30px;
+    float: left;
 }
