--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,12 @@
-<header>
-    <img src="Connor.jpg" height="450" width="300"/>
-    <p id="heroText">
-        Hi, my name is Connor Letko
-        I am a Information Systems student
-        at NJIT.
-    </p>
-
+<header id="heroH">
+    <div id="HeroContent">
+        <div class="floatLeft HeroImg"
+            <img src="Connor.jpg" height="450" width="300"/>
+        </div>
+        <p class="floatLeft heroText">
+            Hi, my name is Connor Letko
+            I am a Information Systems student
+            at NJIT.
+        </p>
+    </div>
 </header>
