--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8'>
-    <link rel="stylesheet" href="{{site.url}}/assets/css/header.css" type="text/css">
+    <link rel="stylesheet" href="{{site.url}}/assets/css/hero.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/navbar.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/footer.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/layout.css" type="text/css">
@@ -25,7 +25,7 @@
 
 <body>
 {% include navbar.html %}
-{% include header.html %}
+{% include hero.html %}
 <div id="container">
     <div id="main">{{ content }}</div>
 </div>
