--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,4 +1,5 @@
 .hero-image {
+    top: 14px;
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("technology.jpg");
 
