--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,12 +1,7 @@
 .hero-image {
-    top: 14px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("technology.jpg");
+    background-image: url("technology.jpg");
 }
 .hero-text {
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     color: white;
 }
