--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,8 +1,6 @@
 .hero-image {
     background-image: url('http://rumbleasia.com/wp-content/uploads/2013/05/technology1-960x300.jpg');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+    top: 46px;
 }
 .hero-text {
     text-align: center;
