--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -2,6 +2,7 @@
     background-image: url('http://rumbleasia.com/wp-content/uploads/2013/05/technology1-960x300.jpg');
     top: 46px;
     height: 300px;
+    background-repeat: repeat-x;
 }
 .hero-text {
     text-align: center;
