--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,6 +1,6 @@
 .hero-image {
     background-image: url('http://rumbleasia.com/wp-content/uploads/2013/05/technology1-960x300.jpg');
-    top: 46px;
+    padding-top: 46px;
     height: 300px;
     background-repeat: repeat-x;
 }
