--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -2,7 +2,8 @@
     background-image: url('http://rumbleasia.com/wp-content/uploads/2013/05/technology1-960x300.jpg');
     padding-top: 46px;
     height: 300px;
-    background-repeat: repeat-x;
+    background-repeat: no-repeat;
+    position: relative;
 }
 .hero-text {
     text-align: center;
