--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,9 +1,10 @@
 .hero-image {
     background-image: url('http://rumbleasia.com/wp-content/uploads/2013/05/technology1-960x300.jpg');
-    padding-top: 46px;
+    width: 100%;
+    top: 46px;
     height: 300px;
     background-repeat: no-repeat;
-    position: relative;
+    position: absolute;
 }
 .hero-text {
     text-align: center;
