--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,14 +1,18 @@
 .hero-image {
-    background-image: url('http://rumbleasia.com/wp-content/uploads/2013/05/technology1-960x300.jpg');
+    background-image: url('Tech1.jpg');
     width: 100%;
     top: 46px;
     height: 300px;
     background-repeat: no-repeat;
     position: absolute;
     background-size: 100% 100%;
+    text-align: center;
 }
 .hero-text {
-    text-align: center;
     color: white;
-    vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 }
