--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -8,7 +8,16 @@ html, body {
 }
 #container {
     min-height:100%;
-    padding-top: 20px;
+    top: 546px;
+    width 960px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 18px;
+    line-height: 30px;
+    font-family: SansSerif, "Helvetica Neue", Helvetica;
+    overflow: auto;
+    padding-bottom: 100px;
+    padding-top: 50px;
 }
 
 #main {
@@ -20,4 +29,8 @@ html, body {
     height: 50px;
     margin-top: -100px;
     clear: both;
+}
+#article_text {
+    padding-left: 20px;
+    padding-right: 20px;
 }
