--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -7,7 +7,7 @@ html, body {
     height:100%;
 }
 #container {
-    position: absolute;
+    position: relative;
     top: 546px;
     width 960px;
     margin-left: auto;
