--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -9,7 +9,7 @@ html, body {
 #container {
     position: relative;
     top: 546px;
-    width 960px;
+    width: 960px;
     margin-left: auto;
     margin-right: auto;
     font-size: 18px;
