--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -2,13 +2,13 @@
     background-image: url('Tech1.jpg');
     width: 100%;
     top: 46px;
-    position: absolute;
+    position: relative;
     background-size: 100% 100%;
     text-align: center;
 }
 .hero-text {
     color: white;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
