Fix: hero and nav

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,10 @@
-<div class="hero-image">
-    <div class="hero-text">
-        <h1>I am Connor Letko</h1>
-        <p>And I'm a Student at NJIT</p>
-    </div>
+<div class="hero-cont">
+    <section>
+        <img id="image" src="../assets/css/Tech1.jpg" height="500" width="1920"/>
+        <h1 id="title">My Portfolio</h1>
+            <div id="information">
+                <h3 id="sub-head">Hi my name is Connor Letko.</h3>
+                <p>I'm a student at NJIT going into my 4th semester</p>
+            </div>
+    </section>
 </div>
