--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,10 @@
 <div class="nav">
-    <li><a href='{{ site.url }}/'> Home</a></li>
-    <li><a href='{{ site.url }}/about/'>About </a></li>
-    <li><a href='{{ site.url }}/projects/'>Projects</a></li>
-    <li><a href='{{ site.url }}/writings/'>Writings</a></li>
-    <li><a href='{{ site.url }}/resume/'>Resume</a></li>
-    <li><a href='{{ site.url }}/contact/'>Contact</a></li>
+    <nav>
+        <li><a href='{{ site.url }}/'> Home</a></li>
+        <li><a href='{{ site.url }}/about/'>About </a></li>
+        <li><a href='{{ site.url }}/projects/'>Projects</a></li>
+        <li><a href='{{ site.url }}/writings/'>Writings</a></li>
+        <li><a href='{{ site.url }}/resume/'>Resume</a></li>
+        <li><a href='{{ site.url }}/contact/'>Contact</a></li>
+    </nav>
 </div>
