--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{site.url}}/assets/css/navbar.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/footer.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/Flayout.css" type="text/css">
+    <link rel="stylesheet" href="{{site.url}}/assets/css/normalize.css" type="text/css">
 
     {% if site.highlighter %}
     <link rel='stylesheet' href='{{ site.url }}/assets/css/syntax.css' type='text/css'>
