--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,16 +1,17 @@
-.hero-image {
-    background-image: url('Tech1.jpg');
+.hero-cont {
+    background: #999;
     width: 100%;
-    top: 46px;
-    position: relative;
-    background-size: 100% 100%;
-    text-align: center;
 }
-.hero-text {
-    color: white;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+section{
+    background: #999;
+    padding: 50px 0;
+    max-width: 40%;
+    margin: 0 auto;
 }
+#image{
+    display: block;
+    width: 200px;
+    border: white solid 5px;
+    border-radius: 50%;
+    margin: 0 auto;
 }
