--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,32 +1,31 @@
 .nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    top: 0;
+    background: #333;
+    height:40px;
     width: 100%;
-    background-color: #000000;
+}
+
+
+nav {
+    margin: 0 auto;
+    display: flex;
+    align-items:center;
+    max-width: 600px;
+    background: #333;
     z-index: 999;
+    height:40px;
+    justify-content: space-between;
 }
 
-.nav li {
+nav li {
     float: left;
-    border-right: 1px solid #bbbbbb;
 }
-
-.nav li a {
-    display: block;
-    padding: 14px 16px;
+nav li a {
+    padding-right: 10px;
     color: white;
-    text-align: center;
     text-decoration: none;
+    font-size: 15px;
 }
-
-.nav li:last-child {
-    border-right: none;
-}
-
-.nav li a:hover{
+nav li a:hover{
     background-color: #111;
 }
 
