--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,17 +1,20 @@
+body, html{
+    height:100%;
+}
+
 .hero-cont {
-    background: #999;
-    width: 100%;
+    background-image: url("Tech1.jpg")
+    height:50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 section{
-    background: #999;
-    padding: 50px 0;
-    max-width: 40%;
-    margin: 0 auto;
-}
-#image{
-    display: block;
-    width: 200px;
-    border: white solid 5px;
-    border-radius: 50%;
-    margin: 0 auto;
+    text-align: center;
+    position: aabsolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
