--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,13 +1,19 @@
 .nav {
     background: #333;
-    height:40px;
     width: 100%;
+    position: relative;
+    height: 40px;
 }
 
 
 nav {
-    margin: 0 auto;
-    display: flex;
+    position: fixed;
+    top: 0;
+    width:100%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     align-items:center;
     max-width: 600px;
     background: #333;
@@ -20,10 +26,11 @@ nav li {
     float: left;
 }
 nav li a {
-    padding-right: 10px;
+    display: block
     color: white;
-    text-decoration: none;
+    padding: 14px 16px;
     font-size: 15px;
+    text-decorate: none;
 }
 nav li a:hover{
     background-color: #111;
