--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -12,7 +12,7 @@ body, html{
 }
 section{
     text-align: center;
-    position: aabsolute;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
