--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,11 +1,3 @@
-.nav {
-    background: #333;
-    width: 100%;
-    position: relative;
-    height: 40px;
-}
-
-
 nav {
     position: fixed;
     top: 0;
@@ -14,12 +6,8 @@ nav {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    align-items:center;
-    max-width: 600px;
     background: #333;
     z-index: 999;
-    height:40px;
-    justify-content: space-between;
 }
 
 nav li {
@@ -28,9 +16,9 @@ nav li {
 nav li a {
     display: block
     color: white;
+    text-align: center;
     padding: 14px 16px;
-    font-size: 15px;
-    text-decorate: none;
+    text-decoration: none;
 }
 nav li a:hover{
     background-color: #111;
