--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,27 +1,26 @@
-nav {
+ul {
     position: fixed;
     top: 0;
-    width:100%;
+    width: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background: #333;
-    z-index: 999;
+    background-color: #333;
 }
 
-nav li {
+li {
     float: left;
 }
-nav li a {
-    display: block
+
+li a {
+    display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-nav li a:hover{
+
+li a:hover {
     background-color: #111;
 }
-
-
