--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -25,7 +25,7 @@
 </div>
 <div id="sidebar" class="floatLeft grSmall">
     <div id="sidebar_image">
-        <img src="../img/Me.jpeg" height="328" width="300"/>
+        <img src="../img/Connor.jpg" height="328" width="300"/>
     </div>
 </div>
 </div>
