--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,10 +1,11 @@
 body, html{
-    height:100%;
+    height: 100%;
 }
 
 .hero-cont {
+    padding-top: 46px;
     background-image: url("Tech1.jpg");
-    height:50%;
+    height: 50%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
