Fix: hero and nav

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -7,22 +7,21 @@ html, body {
     height:100%;
 }
 #container {
-    position: relative;
-    top: 546px;
     width: 960px;
+    border: black thin;
     margin-left: auto;
     margin-right: auto;
     font-size: 18px;
     line-height: 30px;
     font-family: SansSerif, "Helvetica Neue", Helvetica;
+    min-height:100%;
     overflow: auto;
     padding-bottom: 100px;
     padding-top: 50px;
 }
 
 #main {
-    overflow: auto;
-    padding-bottom: 100px;
+    float: left;
 }
 #footer {
     position: relative;
