--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -3,8 +3,15 @@
     padding:0;
 }
 
-html, body {
-    height:100%;
+html{
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+body {
+    margin: 0;
+    min-height: 100%;
+    width: 100%;
 }
 
 #wrapper {
