--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 {% include hero.html %}
 <div id="container">
     <div id="main">{{ content }}</div>
+    {% include footer.html %}
 </div>
-    <footer id="footer">{% include footer.html %}</footer>
 </body>
 </html>
