--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -28,8 +28,8 @@
         <img src="../img/Connor.jpg" height="328" width="300"/>
     </div>
 </div>
+    {% include footer.html %}
 </div>
-<footer id="footer">{% include footer.html %}</footer>
 </body>
 </html>
 
