--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -26,13 +26,14 @@ body {
     padding-bottom: 100px;
     padding-top: 50px;
     min-height: 100%;
-    height: 100%;
-    position: relative
+    position: relative;
+
 }
 
 #article_text {
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 50px;
 }
 #article_heading{
     padding: 20px;
