--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -25,7 +25,7 @@ body {
     font-family: SansSerif, "Helvetica Neue", Helvetica;
     overflow: auto;
     padding-bottom: 100px;
-    padding-top: 50px;
+    padding-top: 100px;
     min-height: 100%;
     position: relative;
 
@@ -60,6 +60,10 @@ body {
 }
 .grSmall {
     width: 367px;
+}
+h2{
+    text-align: center;
+    font-size: 26px;
 }
 
 
