--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -25,7 +25,7 @@ body {
     min-height:100%;
     overflow: auto;
     padding-bottom: 100px;
-    padding-top: 50px;
+    padding-top: 100px;
     position: relative;
 }
 
@@ -35,4 +35,9 @@ body {
 #article_text {
     padding-left: 20px;
     padding-right: 20px;
+}
+h1 #title{
+    text-align: center;
+    font-size: 26px;
+    padding-bottom: 50px;
 }
