Fix: icon in sidebar css

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,22 @@
-<!-- Load font awesome icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!-- The social media icon bar -->
-<div class="icon-bar">
-    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-    <a href="#" class="google"><i class="fa fa-google"></i></a>
-    <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-    <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+<div id="sidebar" class="floatRight grSmall">
+    <p>
+        lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu fermentum felis. Praesent facilisis mauris velit,
+        vitae scelerisque arcu tempor et. Sed iaculis ac elit id egestas. Aenean maximus eros aliquam felis tempor iaculis.
+        Morbi ultricies lectus felis, ac mollis lacus venenatis vel. Duis et pellentesque erat. Praesent viverra finibus
+        suscipit. Quisque vel pretium arcu, pulvinar ullamcorper leo. Mauris libero magna, congue sed porta at, eleifend a
+        mi. Pellentesque eget bibendum sapien, eget volutpat est. Donec consectetur volutpat leo id pellentesque. Integer
+        fringilla nulla et sagittis varius. Aliquam condimentum, nisi ac porta ullamcorper, nisl ante pellentesque tortor,
+        ac suscipit lorem odio non leo. Morbi felis urna, malesuada a risus non, egestas fringilla ligula. In luctus
+        convallis felis sit amet sodales.
+    </p>
+    <p>
+        Nam placerat quam ligula. Cras ac pretium orci. Nulla facilisi. Fusce interdum ex dolor, ut cursus eros hendrerit
+        ac. Sed dignissim mauris rhoncus, ornare nibh hendrerit, ultrices nisi. Sed urna erat, placerat nec nunc at,
+        dignissim porta est. Aenean ac lectus fringilla, porttitor lacus vel, sodales mauris. Sed sed ante quis augue
+        volutpat pulvinar non iaculis nulla. Ut mattis ultrices tortor ac gravida. Fusce aliquet metus consectetur lacus
+        ultrices rhoncus. Aenean ut suscipit nisl, ullamcorper tempor lectus. Suspendisse a dictum magna, eu consectetur
+        massa. Phasellus posuere, tortor ut sagittis volutpat, mauris enim egestas elit, a dapibus ipsum dolor at urna.
+        Vestibulum arcu est, convallis sit amet tortor non, sodales tristique lectus.
+    </p>
 </div>
