--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -35,6 +35,7 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 50px;
+    display: contents !important;
 }
 #article_heading{
     padding: 20px;
