--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -52,13 +52,16 @@ body {
 .grSmall {
     width: 367px;
 }
+
+#sidebar{
+    padding:20px;
+}
 .fa {
     padding: 20px;
     font-size: 30px;
     width: 30px;
     text-align: center;
     text-decoration: none;
-    border-radius: 50%;
 }
 
 /* Add a hover effect if you want */
