--- a/_layouts/Flayout.html
+++ b/_layouts/Flayout.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{site.url}}/assets/css/footer.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/Flayout.css" type="text/css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     {% if site.highlighter %}
     <link rel='stylesheet' href='{{ site.url }}/assets/css/syntax.css' type='text/css'>
@@ -24,8 +25,8 @@
     {{content}}
 </div>
     {% include sidebar.html %}
-    {% include footer.html %}
 </div>
+    {% include footer.html %}
 </body>
 </html>
 
