--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -56,16 +56,13 @@ body {
 
 .icon-bar{
     padding:20px;
-    width: 367px;
-    float: left;
 }
 .fa {
-    display: block;
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
     text-align: center;
-    padding: 16px;
-    transition: all 0.3s ease;
-    color: white;
-    font-size: 20px;
+    text-decoration: none;
 }
 
 /* Add a hover effect if you want */
@@ -79,33 +76,29 @@ h2{
     font-size: 26px;
 }
 
-.facebook {
+.fa-facebook {
     background: #3B5998;
     color: white;
 }
 
-.twitter {
+.fa-twitter {
     background: #55ACEE;
     color: white;
 }
 
-.google {
+.fa-google {
     background: #dd4b39;
     color: white;
 }
 
-.linkedin {
+.fa-linkedin {
     background: #007bb5;
     color: white;
 }
 
-.youtube {
+.fa-youtube {
     background: #bb0000;
     color: white;
 }
 
-.content {
-    margin-left: 75px;
-    font-size: 30px;
-}
 
