--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -27,8 +27,10 @@ body {
     padding-bottom: 100px;
     padding-top: 100px;
     position: relative;
+    text-align: center;
 }
 #callout_one, #callout_two, #callout_three {
+    text-align: center;
     float: left;
     width: 298px;
     height: 196px;
