--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,6 @@
 <div class="hero-cont">
     <section>
         <h1 id="title">My Portfolio</h1>
-        <h3 id="sub-head">Hi my name is Connor Letko.</h3>
-        <p>I'm a student at NJIT going into my 4th semester</p>
+        <h3 id="sub-head">Connor Letko - Web Information Systems major out of NJIT</h3>
     </section>
 </div>
