--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,11 +4,10 @@
 
 <!-- The social media icon bar -->
 <div class="icon-bar" class="floatLeft grSmall">
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-google"></i></a>
+    <a href="https://www.facebook.com/connor.letko"><i class="fa fa-facebook"></i></a>
+    <a href="https://www.instagram.com/connor_182/"><i class="fa fa-twitter"></i></a>
     <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="#"><i class="fa fa-youtube"></i></a>
+    <a href="https://github.com/cjl72"><i class="fa fa-github"></i></a>
 </div>
 
    
