--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
 {% include navbar.html %}
 {% include hero.html %}
 <div id="container">
-    <div id="main">{{ content }}</div>{% include footer.html %}
+    <div id="main">{{ content }}</div>
+    {% include footer.html %}
 </div>
 </body>
 </html>
