--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -39,6 +39,8 @@ body {
 }
 #article_heading{
     padding: 20px;
+    align-self: center;
+    font-size: 50px;
 }
 #top {
     height: 120px;
@@ -60,7 +62,7 @@ body {
 .fa {
     padding: 20px;
     font-size: 30px;
-    width: 50px;
+    width: 320px;
     text-align: center;
     text-decoration: none;
 }
@@ -68,12 +70,6 @@ body {
 /* Add a hover effect if you want */
 .fa:hover {
     opacity: 0.7;
-}
-
-}
-h2{
-    align-self: center;
-    font-size: 26px;
 }
 
 .fa-facebook {
@@ -86,8 +82,8 @@ h2{
     color: white;
 }
 
-.fa-google {
-    background: #dd4b39;
+.fa-github {
+    background: #999;
     color: white;
 }
 
@@ -96,9 +92,6 @@ h2{
     color: white;
 }
 
-.fa-youtube {
-    background: #bb0000;
-    color: white;
-}
+
 
 
