--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -51,6 +51,9 @@ body {
 }
 h1 #title{
     text-align: center;
-    font-size: 26px;
+    font-size: 50px;
     padding: 20px;
+}
+h3 #sub-head{
+    font-size: 35px;
 }
