--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -40,7 +40,7 @@ body {
 #article_heading{
     padding: 20px;
     align-self: center;
-    font-size: 50px;
+    font-size: 30px;
 }
 #top {
     height: 120px;
@@ -62,7 +62,8 @@ body {
 .fa {
     padding: 20px;
     font-size: 30px;
-    width: 320px;
+    width: 300px;
+    height: 300px
     text-align: center;
     text-decoration: none;
 }
