--- a/assets/css/Flayout.css
+++ b/assets/css/Flayout.css
@@ -62,8 +62,8 @@ body {
 .fa {
     padding: 20px;
     font-size: 30px;
-    width: 300px;
-    height: 300px
+    width: 250px;
+    height: 250px;
     text-align: center;
     text-decoration: none;
 }
