Feature: Google Analytics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
     };
     ga.q = [];
     ga.l = +new Date;
-    ga('create', 'UA-{{ site.google }}' , 'auto');
+    ga('create', 'UA-153630802-1' , 'auto');
     ga('set', 'transport', 'beacon');
     ga('send', 'pageview')
 </script>
