Fix: sidebar links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,10 +4,9 @@
 
 <!-- The social media icon bar -->
 <div class="icon-bar" class="floatLeft grSmall">
-    <a href="https://www.facebook.com/connor.letko"><i class="fa fa-facebook"></i></a>
-    <a href="https://www.instagram.com/connor_182/"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/cjl72"><i class="fa fa-github"></i></a>
+    <a href="https://www.instagram.com/patelpari108/"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/patelpari108"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/pkp68"><i class="fa fa-github"></i></a>
 </div>
 
    
