Fix: footer and hero

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-    © Connor Letko -
+    © Pari Patel -
     <script type="text/javascript">
         var d = new Date()
         document.write(d.getFullYear())
