--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,6 @@
 <div class="hero-cont">
     <section>
         <h1 id="title">My Portfolio</h1>
-        <h3 id="sub-head">Connor Letko - Web Information Systems major out of NJIT</h3>
+        <h3 id="sub-head">Pari Patel - Web Information Systems major out of NJIT</h3>
     </section>
 </div>
